@@ -1,6 +1,7 @@
 1.9.RC
 -------
 o Clearer error message for when aggregations are used in ORDER BY and not in RETURN
+o Fixes #394 - Identifiers inside of FOREACH get the wrong type
 
 1.9.M03
 -------
